--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=cadastro-pessoas
+spring.datasource.url=jdbc:mysql://localhost:3306/db_cadastro
+spring.datasource.username=root
+spring.datasource.password=admin123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
